<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/root_left_guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/root_right_guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_end="16dp" />

        <ImageView
            android:id="@+id/movie_logo_image"
            android:layout_width="match_parent"
            android:layout_height="298dp"
            android:scaleType="centerCrop"
            android:src="@drawable/avengers_logo"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/ic_mask"
            app:layout_constraintBottom_toBottomOf="@+id/movie_logo_image"
            app:layout_constraintEnd_toEndOf="@+id/movie_logo_image"
            app:layout_constraintStart_toStartOf="@+id/movie_logo_image"
            app:layout_constraintTop_toTopOf="@+id/movie_logo_image" />

        <ImageView
            android:id="@+id/back_button_arrow_image"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="18dp"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="@+id/back_button_text"
            app:layout_constraintStart_toEndOf="@+id/root_left_guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/back_button_text"
            app:tint="@color/gray_dark"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/back_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="56dp"
            android:text="@string/back"
            android:textColor="@color/gray_dark"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/back_button_arrow_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/movie_age_restrictions_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@drawable/ic_rectangle"
            android:backgroundTint="@color/background_color"
            android:gravity="center"
            android:text="@string/age_restrictions"
            android:textColor="@color/color_white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/movie_name_text"
            app:layout_constraintStart_toEndOf="@+id/root_left_guideline" />

        <TextView
            android:id="@+id/movie_name_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="254dp"
            android:text="@string/avengers_movie_name"
            android:textColor="@color/color_white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/root_right_guideline"
            app:layout_constraintStart_toEndOf="@+id/root_left_guideline"
            app:layout_constraintTop_toTopOf="@+id/movie_logo_image" />

        <TextView
            android:id="@+id/movie_tags_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/avengers_movie_tags"
            android:textColor="@color/pink_dark"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/root_right_guideline"
            app:layout_constraintStart_toEndOf="@+id/root_left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/movie_name_text" />

        <ImageView
            android:id="@+id/movie_rating_star1_image"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:padding="1dp"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintBottom_toBottomOf="@+id/movie_reviews_count_text"
            app:layout_constraintStart_toEndOf="@+id/root_left_guideline"
            app:layout_constraintTop_toTopOf="@+id/movie_reviews_count_text"
            app:tint="@color/pink_light"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/movie_rating_star2_image"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:padding="1dp"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintBottom_toBottomOf="@+id/movie_rating_star1_image"
            app:layout_constraintStart_toEndOf="@+id/movie_rating_star1_image"
            app:layout_constraintTop_toTopOf="@+id/movie_rating_star1_image"
            app:tint="@color/pink_light"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/movie_rating_star3_image"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:padding="1dp"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintBottom_toBottomOf="@+id/movie_rating_star1_image"
            app:layout_constraintStart_toEndOf="@+id/movie_rating_star2_image"
            app:layout_constraintTop_toTopOf="@+id/movie_rating_star1_image"
            app:tint="@color/pink_light"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/movie_rating_star4_image"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:padding="1dp"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintBottom_toBottomOf="@+id/movie_rating_star1_image"
            app:layout_constraintStart_toEndOf="@+id/movie_rating_star3_image"
            app:layout_constraintTop_toTopOf="@+id/movie_rating_star1_image"
            app:tint="@color/pink_light"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/movie_rating_star5_image"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:padding="1dp"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintBottom_toBottomOf="@+id/movie_rating_star1_image"
            app:layout_constraintStart_toEndOf="@+id/movie_rating_star4_image"
            app:layout_constraintTop_toTopOf="@+id/movie_rating_star1_image"
            app:tint="@color/gray_dark"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/movie_reviews_count_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/reviews_count"
            android:textAllCaps="true"
            android:textColor="@color/gray_dark"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/root_right_guideline"
            app:layout_constraintStart_toEndOf="@+id/movie_rating_star5_image"
            app:layout_constraintTop_toBottomOf="@+id/movie_tags_text" />

        <TextView
            android:id="@+id/movie_storyline_title_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/storyline_title"
            android:textColor="@color/color_white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/root_right_guideline"
            app:layout_constraintStart_toEndOf="@+id/root_left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/movie_reviews_count_text" />

        <TextView
            android:id="@+id/movie_storyline_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/storyline"
            android:textColor="@color/color_white_transparent"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/root_right_guideline"
            app:layout_constraintStart_toEndOf="@+id/root_left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/movie_storyline_title_text" />

        <TextView
            android:id="@+id/movie_cast_title_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/cast_title"
            android:textColor="@color/color_white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/root_right_guideline"
            app:layout_constraintStart_toEndOf="@+id/root_left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/movie_storyline_text" />

        <ImageView
            android:id="@+id/movie_cast1_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/movie_cast_1"
            app:layout_constraintDimensionRatio="1,1"
            app:layout_constraintEnd_toStartOf="@+id/movie_cast2_image"
            app:layout_constraintStart_toEndOf="@+id/root_left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/movie_cast_title_text"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/movie_cast2_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/movie_cast_2"
            app:layout_constraintDimensionRatio="1,1"
            app:layout_constraintEnd_toStartOf="@+id/movie_cast3_image"
            app:layout_constraintStart_toEndOf="@+id/movie_cast1_image"
            app:layout_constraintTop_toTopOf="@+id/movie_cast1_image"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/movie_cast3_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/movie_cast_3"
            app:layout_constraintDimensionRatio="1,1"
            app:layout_constraintEnd_toStartOf="@+id/movie_cast4_image"
            app:layout_constraintStart_toEndOf="@+id/movie_cast2_image"
            app:layout_constraintTop_toTopOf="@+id/movie_cast1_image"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/movie_cast4_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/movie_cast_4"
            app:layout_constraintDimensionRatio="1,1"
            app:layout_constraintEnd_toStartOf="@id/root_right_guideline"
            app:layout_constraintStart_toEndOf="@+id/movie_cast3_image"
            app:layout_constraintTop_toTopOf="@+id/movie_cast1_image"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/movie_cast1_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/movie_cast_1_name"
            android:textColor="@color/gray_light"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/movie_cast1_image"
            app:layout_constraintStart_toStartOf="@+id/movie_cast1_image"
            app:layout_constraintTop_toBottomOf="@+id/movie_cast1_image" />

        <TextView
            android:id="@+id/movie_cast2_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/movie_cast_2_name"
            android:textColor="@color/gray_light"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/movie_cast2_image"
            app:layout_constraintStart_toStartOf="@+id/movie_cast2_image"
            app:layout_constraintTop_toTopOf="@+id/movie_cast1_text" />

        <TextView
            android:id="@+id/movie_cast3_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/movie_cast_3_name"
            android:textColor="@color/gray_light"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/movie_cast3_image"
            app:layout_constraintStart_toStartOf="@+id/movie_cast3_image"
            app:layout_constraintTop_toTopOf="@+id/movie_cast1_text" />

        <TextView
            android:id="@+id/movie_cast4_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/movie_cast_4_name"
            android:textColor="@color/gray_light"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/movie_cast4_image"
            app:layout_constraintStart_toStartOf="@+id/movie_cast4_image"
            app:layout_constraintTop_toTopOf="@+id/movie_cast1_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>